[package]
name = "fs_util"
version = "0.1.0"
authors = ["Jacob Sacco <jacobsacco@ou.edu>"]
edition = "2018"
description = "A package providing a few useful functions that std::fs does not"
repository = "https://github.com/jacobsacco/rs_fs_util"
license = "MIT"
license-file = "License.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_error = "0.1.0"

